# mdboard

./: .gitignore  CLAUDE.md  README.md  index.html  main.py  pyproject.toml  server.py
documents/001-mdboard-evaluation-llm-workflow-fit/: current.md
reports/001-mdboard-evaluation-llm-workflow-fit/: current.md
server/: pyproject.toml
server/src/mdboard/: cli.py  init.py  server.py
src/mdboard/: __init__.py  __main__.py  cli.py  init.py  server.py
tasks/: config.yaml
tasks/backlog/: 005-publish-to-pypi.md  006-readme-update-install-instructions.md  007-resource-file-format.md  008-backend-prompts-reports-api.md  009-ui-tab-navigation.md  010-ui-prompts-view.md  011-ui-reports-view.md  012-add-live-auto-refresh-via-sse.md  013-add-cross-linking-between-resources.md  014-replace-revision-snapshots-with-git-log-view.md  015-add-read-only-activity-feed.md  016-rename-reports-to-documents.md  017-add-markdown-preview-in-create-and-edit-modals.md
tasks/done/: 001-pypi-packaging.md  002-claude-code-skill.md  003-init-command.md  004-rename-to-mdboard.md  005-publish-to-pypi.md  006-readme-update-install-instructions.md  007-resource-file-format.md  008-backend-prompts-reports-api.md  009-ui-tab-navigation.md  010-ui-prompts-view.md  011-ui-reports-view.md  012-add-live-auto-refresh-via-sse.md  013-add-cross-linking-between-resources.md  (+4 more)
tui/: Cargo.toml
tui/src/: api.rs  app.rs  main.rs  model.rs  poll.rs  theme.rs
tui/src/ui/: activity.rs  board.rs  common.rs  header.rs  markdown.rs  mod.rs  resources.rs  task_detail.rs
web/: index.html
(+6 files in other folders)
