[project]
name = "mdboard"
version = "0.1.2"
description = "Markdown task board for your repo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mdboard = "mdboard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdboard"]
