[project]
name = "mdboard"
version = "0.1.9"
description = "Markdown task board for your repo"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mdboard = "mdboard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdboard"]

[tool.hatch.build.targets.wheel.force-include]
"../web/index.html" = "mdboard/_assets/index.html"
